<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background_header_login"
        android:gravity="center">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/ico_avatar_xhd" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username_email" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edtUsername"
            android:layout_marginTop="20dp"
            android:hint="@string/password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/edtPassword"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/background_header_login"
            android:text="@string/Sign_in"
            android:textAllCaps="false"
            android:textColor="@color/text_signin"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="Forgot Password?"
            android:textColor="@color/text_forgotPassword" />
    </RelativeLayout>
</LinearLayout>